--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body{
+html, body, #root{
   width: 100%;
   min-height: 100%;
-  height: 100vh;
+}
+
+body{
+  min-height: 100%;
 }
 
 
